--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main>
-        <h1>Focus Web</h1>
+        <h1>FocusLy</h1>
         <form action="">
             <input type="text" id="categoria" placeholder="Digite o tema do card">
             <input type="text" id="frente" placeholder="Digite a frente do card">
