Mudanças na interface de exibição dos Cards

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="mobile.css" media="all">
     <link rel="stylesheet" href="dektop.css">
-    <title>Focus Web</title>
+    <title>FocusLy</title>
 </head>
 <body>
     <main>
